example3[Consistent Hashing]/pod1.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: httpd
    version: v1
  name: httpd-v1
spec:
  containers:
  - image: httpd
    name: httpd
    resources: {}
    volumeMounts:
    - mountPath: /usr/local/apache2/htdocs
      name: index-html
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:
  - emptyDir: {}
    name: index-html
