example3[Consistent Hashing]/pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: httpd
    version: v2
  name: httpd-v2
  namespace: istio-demo
spec:
  containers:
  - image: httpd
    name: httpd
    resources: {}
    volumeMounts:
    - mountPath: /usr/local/apache2/htdocs
      name: index-html
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:
  - emptyDir: {}
    name: index-html
