example3[Consistent Hashing]/pod-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-service
  name: web-service
  namespace: istio-demo
spec:
  ports:
  - name: http-port
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: httpd
  type: ClusterIP
